@@ -98,6 +98,7 @@ public:
 
   afx_msg void OnEnSetfocusNotes();
   afx_msg void OnEnKillfocusNotes();
+  afx_msg void OnBnClickedViewnotes();
 };
 //-----------------------------------------------------------------------------
 // Local variables:
