@@ -641,6 +641,7 @@ BEGIN
     LTEXT           "Max:",IDC_STATIC,228,183,16,8
     CTEXT           "255",IDC_PWHMAX,246,183,16,8
     GROUPBOX        "",IDC_STATIC,208,151,71,43
+    PUSHBUTTON      "Edit Notes",IDC_VIEWNOTES,225,240,50,14
 END
 
 IDD_QUERYSETDEF DIALOGEX 0, 0, 255, 102
